@@ -76,6 +76,17 @@
 				<groupId>org.apache.cayenne</groupId>
 				<artifactId>cayenne-server</artifactId>
 				<version>${cayenne-version}</version>
+				<exclusions>
+					<exclusion>
+						<artifactId>commons-logging</artifactId>
+						<groupId>commons-logging</groupId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.cayenne</groupId>
+				<artifactId>cayenne-java8</artifactId>
+				<version>${cayenne-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
