@@ -1,5 +1,6 @@
 Release 1.8
 
+#71  DataSourceConnector: Out-of-the-box Java 8 support
 #104 Boolean JDBC normalizer fails to normalize a java.lang.Boolean 
 #106 Listener for the after targets committed stage
 #107 Switch to Java 8
